.argo/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: staging-website
  labels:
    app.kubernetes.io/name: website-frontend
    app.kubernetes.io/instance: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: website-frontend
      app.kubernetes.io/instance: staging
  template:
    metadata:
      labels:
        app.kubernetes.io/name: website-frontend
        app.kubernetes.io/instance: staging
    spec:
      containers:
        - image: registry.robocup.de/website/frontend:2.7.3-sha-5cf63ba16435788f8e8c07e57c4d59d125b45ab2
          name: website-frontend
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            failureThreshold: 3
            periodSeconds: 20
      imagePullSecrets:
        - name: registry
