.argo/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: staging-website
  annotations:
    cert-manager.io/cluster-issuer: my-letsencrypt-prod
spec:
  rules:
    - host: test.robocup.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
    - host: testwm.robocup.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - test.robocup.de
        - testwm.robocup.de
      secretName: website-frontend-staging-tls
